# EC535-final

./: .clangd  .gitignore  README.md
.cache/clangd/index/: main.cpp.DC32CFAB701EF205.idx
km/: Makefile  sonarkm.c  sonarkm.ko
notes/: SonarModuleErrorMsg.txt
sloper/: .clangd  .gitignore  CMakeLists.txt  arm-toolchain.cmake  main.cpp
sloper/src/: animatableimage.cpp  animatableimage.h  gamestate.cpp  gamestate.h  helpers.cpp  helpers.h  keyboardcontrolledview.cpp  keyboardcontrolledview.h  main.cpp  sonarcontrolledview.cpp  sonarcontrolledview.h
